# thread_pool

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  ROADMAP.md  callback_data.cpp  job.cpp  job.h  job_data.h  job_manager.cpp  thread_pool.cpp  thread_pool.h  thread_worker.cpp  thread_worker.h
.claude/: settings.local.json
sample/: CMakeLists.txt  README.md  future_sample.cpp  sample.cpp  sample_job.h  sample_lambda.cpp  test_return_values.cpp
src/: callback_data.h  job.cpp  job.h  job_manager.cpp  job_manager.h  thread_pool.cpp  thread_pool.h  thread_worker.cpp  thread_worker.h
